ci: adapt schedule
Test more often, every 3 hours...

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/.github/workflows/twister.yaml
+++ b/.github/workflows/twister.yaml
@@ -11,7 +11,7 @@ on:
       - v*-branch
   schedule:
     # Run at 17:00 UTC on every Saturday
-    - cron: '0 17 * * 6'
+    - cron: '0 */3 * * *'
 
 permissions:
   contents: read
